<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_view"
    tools:context=".view.ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.view.widget.TextChangedEditText
            android:id="@+id/username_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="GitHub username"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GO"/>
    </LinearLayout>

    <com.levibostian.swapper.SwapperView
        android:id="@+id/frag_main_swapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.levibostian.pleasehold.PleaseHoldView
            android:id="@+id/frag_main_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.levibostian.empty.EmptyView
            android:id="@+id/frag_main_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/frag_main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.app.view.widget.UpdateTextView
                android:id="@+id/data_age_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Data last synced 5 minutes ago"
                android:gravity="end"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/repos_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </com.levibostian.swapper.SwapperView>
</LinearLayout>